--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  
+
   <div class="secao">
     <h3 class="text-center">Destaques do dia!</h3>
     <h5 class="text-center">Aproveite as super ofertas que separamos para você:</h5>
@@ -7,7 +7,7 @@
 
   <hr />
 
-  <div class="row">
+  <div class="row" style="margin-bottom: 50px;">
     <div class="col-sm-4" *ngFor="let oferta of ofertas">
       <div class="card">
         <img class="card-img-top" [src]="oferta.imagens[0].url">
@@ -15,10 +15,10 @@
           <h4 class="card-title">{{ oferta.titulo }}</h4>
           <p class="card-text">{{ oferta.descricao_oferta }}</p>
           <p class="preco">{{ oferta.valor }}</p>
-          <a href="#" class="btn btn-outline-primary">Ver oferta</a>
+          <a [routerLink]="['/oferta', oferta.id]" class="btn btn-outline-primary">Ver oferta</a>
         </div>
       </div>
     </div>
+  </div>
   <hr />
-  
 </div>
