--- a/src/app/oferta/oferta.component.html
+++ b/src/app/oferta/oferta.component.html
@@ -45,17 +45,16 @@
     <div class="col">
       <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item">
-          <a class="nav-link active" data-toggle="tab" href="#como-usar" role="tab"
+          <a class="nav-link active" routerLink="como-usar" data-toggle="tab" role="tab"
             aria-selected="true">Como Usar</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" data-toggle="tab" href="#onde-fica" role="tab"
+          <a class="nav-link" routerLink="onde-fica" data-toggle="tab" role="tab"
             aria-selected="false">Onde Fica?</a>
         </li>
       </ul>
       <div class="tab-content">
-        <div class="tab-pane fade show active" id="como-usar" role="tabpanel">Texto "Como Usar"</div>
-        <div class="tab-pane fade show active" id="onde-fica" role="tabpanel">Texto "Onde Fica?"</div>        
+        <router-outlet></router-outlet>
       </div>
     </div>
   </div>
