--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,12 +9,12 @@
 
   <div class="row" style="margin-bottom: 50px;">
     <div class="col-sm-4" *ngFor="let oferta of ofertas">
-      <div class="card">
+      <div class="card" style="width: 18rem;">
         <img class="card-img-top" [src]="oferta.imagens[0].url">
-        <div class="card-block">
+        <div class="card-body">
           <h4 class="card-title">{{ oferta.titulo }}</h4>
           <p class="card-text">{{ oferta.descricao_oferta }}</p>
-          <p class="preco">{{ oferta.valor }}</p>
+          <p class="preco">{{ oferta.valor | currency:'BRL':'symbol' }}</p>
           <a [routerLink]="['/oferta', oferta.id]" class="btn btn-outline-primary">Ver oferta</a>
         </div>
       </div>
