--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -1,23 +1,25 @@
 <div class="fixed-top">
-  <nav class="navbar navbar-light bg-faded">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
+  <nav class="navbar navbar-light bg-light">
+      <div class="row" style="width: 100%; align-items: center;">
+        <div class="col-md-4 text-center">
           <a routerLink="" class="navbar-brand">
             <img src="/assets/logo.png" />
           </a>
         </div>
         <div class="col-md-6">
           <input #searchOffersInput type="text" class="form-control" placeholder="Search offers" (keyup)="searchOffers(searchOffersInput.value)">
-          <ul class="list-group" style="position: absolute;">
-            <li class="list-group-item" *ngFor="let offer of offersList">{{ offer.titulo }}</li>
+          <ul class="list-group" style="position: absolute; z-index: 999;">
+            <li class="list-group-item" *ngFor="let offer of offers | async">
+              <a [routerLink]="['/oferta', offer.id]" (click)="clearSearch()">
+                {{ offer.titulo | reducedDesc:15 }}
+              </a>
+            </li>
           </ul>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-2 text-center">
           <a a href="#"><img src="/assets/carrinho.png" /></a>
         </div>
       </div>
-    </div>
   </nav>
 
   <div class="menu">
