--- a/src/app/ordem-compra/ordem-compra.component.html
+++ b/src/app/ordem-compra/ordem-compra.component.html
@@ -1,141 +1,146 @@
 <div class="container">
-    <div class="ordem-compra">
-      <form novalidate>
-      
-        <h5>Sua Compra</h5>
-        <hr />
-  
-        <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
-          <div class="form-group col-sm-1">
-            <img src="/assets/ofertas/1/img1.jpg" class="img-fluid">
-          </div>
-          <div class="form-group col-sm-6">
-            Super Burger
-            <br />
-            Rodízio de Mini-hambúrger com opção de entrada.
-          </div>
-  
-          <div>
-            <div class="row">
-              <div class="col">
-                <button type="button" class="btn btn-link">-</button>
-                1
-                <button type="button" class="btn btn-link">+</button>
-              </div>
+  <div class="ordem-compra" *ngIf="IdPedidoCompra === undefined">
+    <form novalidate>
+
+      <h5>Sua Compra</h5>
+      <hr />
+
+      <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
+        <div class="form-group col-sm-1">
+          <img src="/assets/ofertas/1/img1.jpg" class="img-fluid">
+        </div>
+        <div class="form-group col-sm-6">
+          Super Burger
+          <br />
+          Rodízio de Mini-hambúrger com opção de entrada.
+        </div>
+
+        <div>
+          <div class="row">
+            <div class="col">
+              <button type="button" class="btn btn-link">-</button>
+              1
+              <button type="button" class="btn btn-link">+</button>
             </div>
           </div>
-  
-          <div class="form-group col-sm-3 d-flex justify-content-end">
-            29.90
-          </div>
         </div>
-        
-        <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
-          <div class="form-group col-sm-1">
-            <img src="/assets/ofertas/4/img1.jpg" class="img-fluid">
-          </div>
-          <div class="form-group col-sm-6">
-            Estância das águas
-            <br />
-            Diversão garantida com piscinas, trilhas e muito mais.
-          </div>
-  
-          <div>
-            <div class="row">
-              <div class="col">
-                <button type="button" class="btn btn-link">-</button>
-                1
-                <button type="button" class="btn btn-link">+</button>
-              </div>
+
+        <div class="form-group col-sm-3 d-flex justify-content-end">
+          29.90
+        </div>
+      </div>
+
+      <div class="form-row" style="background: #FAFAFA; padding: 20px; border-bottom: solid 1px #F0F0F0">
+        <div class="form-group col-sm-1">
+          <img src="/assets/ofertas/4/img1.jpg" class="img-fluid">
+        </div>
+        <div class="form-group col-sm-6">
+          Estância das águas
+          <br />
+          Diversão garantida com piscinas, trilhas e muito mais.
+        </div>
+
+        <div>
+          <div class="row">
+            <div class="col">
+              <button type="button" class="btn btn-link">-</button>
+              1
+              <button type="button" class="btn btn-link">+</button>
             </div>
           </div>
-  
-          <div class="form-group col-sm-3 d-flex justify-content-end">
-            31.90
+        </div>
+
+        <div class="form-group col-sm-3 d-flex justify-content-end">
+          31.90
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div class="form-group col d-flex justify-content-end">
+          <h4>Total do pedido: 61.80</h4>
+        </div>
+      </div>
+      <br />
+
+
+      <h5>Dados de entrega</h5>
+      <hr />
+
+      <div class="form-row">
+
+        <div class="form-group col-md-6">
+          <input type="text" class="form-control {{ endValFlag ? '' : (enderecoValido ? 'is-valid' : 'is-invalid') }}"
+            placeholder="Endereço" autocomplete="off" minlength="5" required [value]="endereco" #inputEndereco
+            (input)="atualizaEndereco(inputEndereco.value)">
+          <div *ngIf="endValFlag === false">
+            <div *ngIf="enderecoValido; else msgEndIvalido">
+              <small class="form-text text-success">Ok</small>
+            </div>
+            <ng-template #msgEndIvalido>
+              <small class="form-text text-danger">Endereço inválido</small>
+            </ng-template>
           </div>
         </div>
-        
-        <div class="form-row">
-          <div class="form-group col d-flex justify-content-end">
-            <h4>Total do pedido: 61.80</h4>
+
+        <div class="form-group col-md-2">
+          <input type="text" class="form-control {{ numValFlag ? '' : (numeroValido ? 'is-valid' : 'is-invalid') }}"
+            placeholder="Número" autocomplete="off" minlength="1" required [value]="numero" #inputNumero
+            (input)="atualizaNumero(inputNumero.value)">
+          <div *ngIf="numValFlag === false">
+            <div *ngIf="numeroValido; else msgNumIvalido">
+              <small class="form-text text-success">Ok</small>
+            </div>
+            <ng-template #msgNumIvalido>
+              <small class="form-text text-danger">Número inválido</small>
+            </ng-template>
           </div>
         </div>
-        <br />
-  
-  
-        <h5>Dados de entrega</h5>
-        <hr />
-  
-        <div class="form-row">
-  
-          <div class="form-group col-md-6">
-            <input
-            type="text"
-            class="form-control {{ endValFlag ? '' : (enderecoValido ? 'is-valid' : 'is-invalid') }}"
-            placeholder="Endereço"
-            autocomplete="off"
-            minlength="5"
-            required
-            [value]="endereco"
-            #inputEndereco
-            (input)="atualizaEndereco(inputEndereco.value)"
-            >
-            <div class="invalid-feedback">Endereço inválido</div>
-          </div>
-  
-          <div class="form-group col-md-2">
-            <input
-            type="text"
-            class="form-control {{ numValFlag ? '' : (numeroValido ? 'is-valid' : 'is-invalid') }}"
-            placeholder="Número"
-            autocomplete="off"
-            minlength="1"
-            required
-            [value]="numero"
-            #inputNumero
-            (input)="atualizaNumero(inputNumero.value)"
-            >
-            <br />
-            <small class="form-text text-muted">Ok</small>
-          </div>
-  
-          <div class="form-group col-md-4">
-            <input
-            type="text"
-            class="form-control {{ complementoValido ? 'is-valid' : '' }}"
-            placeholder="Complemento"
-            autocomplete="off"
-            [value]="complemento"
-            #inputComplemento
-            (input)="atualizaComplemento(inputComplemento.value)"
-            >
-          </div>
-  
+
+        <div class="form-group col-md-4">
+          <input type="text" class="form-control {{ complementoValido ? 'is-valid' : '' }}" placeholder="Complemento"
+            autocomplete="off" [value]="complemento" #inputComplemento
+            (input)="atualizaComplemento(inputComplemento.value)">
+            <div *ngIf="complementoValido">
+                <small class="form-text text-success">Ok</small>
+            </div>
         </div>
-        <br />
-  
-        <h5>Dados de pagamento</h5>
-        <hr />
-  
-        <div class="form-row">
-            
-          <div class="form-group col-md-3">
-            <select
-            class="form-control {{ formaPagValFlag ? '' : (formaPagamentoValido ? 'is-valid' : 'is-invalid') }}"
-            #selectFormaPagamento
-            (change)="atualizaFormaPagamento(selectFormaPagamento.value)"
-            >
-              <option value="no-data">Selecione uma opção</option>
-              <option value="dinheiro" selected="{{ formaPagamento === 'dinheiro' ? 'selected' : '' }}">Dinheiro</option>
-              <option value="debito" selected="{{ formaPagamento === 'debito' ? 'selected' : '' }}">Débito</option>
-            </select>
-  
-            <div class="invalid-feedback">Selecione uma forma de pagamento</div>
+      </div>
+      <br />
+
+      <h5>Dados de pagamento</h5>
+      <hr />
+
+      <div class="form-row">
+
+        <div class="form-group col-md-3">
+          <select class="form-control {{ formaPagValFlag ? '' : (formaPagamentoValido ? 'is-valid' : 'is-invalid') }}"
+            #selectFormaPagamento (change)="atualizaFormaPagamento(selectFormaPagamento.value)">
+            <option value="no-data">Selecione uma opção</option>
+            <option value="dinheiro" selected="{{ formaPagamento === 'dinheiro' ? 'selected' : '' }}">Dinheiro</option>
+            <option value="debito" selected="{{ formaPagamento === 'debito' ? 'selected' : '' }}">Débito</option>
+          </select>
+
+          <div *ngIf="formaPagValFlag === false">
+            <div *ngIf="formaPagamentoValido; else msgFormPagIvalido">
+              <small class="form-text text-success">Ok</small>
+            </div>
+            <ng-template #msgFormPagIvalido>
+              <small class="form-text text-danger">Forma Pagamento inválida</small>
+            </ng-template>
           </div>
         </div>
-  
-        <hr />
-        <button type="submit" class="btn btn-primary btn-lg">Cofirmar compra</button>
-      </form>
-    </div>
+      </div>
+
+      <hr />
+      <button
+      type="button"
+      class="btn btn-primary btn-lg"
+      [disabled]="formState"
+      (click)="confirmarCompra()">Cofirmar compra</button>
+    </form>
   </div>
+
+  <div class="ordem-compra" *ngIf="idPedidoCompra !== undefined">
+    <app-ordem-compra-sucesso [idPedidoCompra]=idPedidoCompra></app-ordem-compra-sucesso>
+  </div>
+</div>
